<resources>
    <string name="tuiroom_app_name">Audio/Video Room</string>
    <string name="tuiroom_share">Share</string>
    <string name="tuiroom_enter_tag_normal">Join</string>
    <string name="tuiroom_rb_voice">Voice</string>
    <string name="tuiroom_rb_normal">Standard</string>
    <string name="tuiroom_rb_music">Music</string>
    <string name="tuiroom_tv_audio_quality">Sound Quality</string>
    <string name="tuiroom_rb_video_fast">Smooth</string>
    <string name="tuiroom_rb_video_hd">High definition</string>
    <string name="tuiroom_tv_video_quality">Image Quality</string>
    <string name="tuiroom_tv_me">%s(Me)</string>
    <string name="tuiroom_title_collection_volume">Collection Volume</string>
    <string name="tuiroom_title_play_volume">Playback Volume</string>
    <string name="tuiroom_title_volume_reminder">Volume Reminder</string>
    <string name="tuiroom_title_audio_recording">Audio Recording</string>
    <string name="tuiroom_btn_start_recording">Start</string>
    <string name="tuiroom_btn_stop_recording">Stop</string>
    <string name="tuiroom_btn_end_recording">End</string>
    <string name="tuiroom_toast_recording_file_path_copied">Recording file save path: %s</string>
    <string name="tuiroom_title_video">Video</string>
    <string name="tuiroom_title_audio">Audio</string>
    <string name="tuiroom_title_sharing">Share</string>
    <string name="tuiroom_toast_play_url_not_null">Enter a playback address.</string>
    <string name="tuiroom_title_bitrate">Bitrate</string>
    <string name="tuiroom_title_resolution">Resolution</string>
    <string name="tuiroom_title_frame_rate">Frame Rate</string>
    <string name="tuiroom_title_local_mirror">Local Mirror</string>
    <string name="tuiroom_title_enable">Enable</string>
    <string name="tuiroom_title_disable">Disable</string>
    <string name="tuiroom_title_turn_on_camera">Camera</string>
    <string name="tuiroom_title_turn_on_microphone">Mic</string>
    <string name="tuiroom_msg_exit_room">You are the initiator. The conference will end if you leave.</string>
    <string name="tuiroom_msg_confirm_exit_room">Are you sure you want to leave the conference?</string>
    <string name="tuiroom_toast_create_room_successfully">Conference created</string>
    <string name="tuiroom_title_entering">Joining…</string>
    <string name="tuiroom_toast_start_screen_recording_failed">Failed to start screen recording</string>
    <string name="tuiroom_toast_error">Error [%1$d]:%2$s</string>
    <string name="tuiroom_toast_end_room">Conference ended by initiator</string>
    <string name="tuiroom_toast_need_floating_window_permission">Floating window permission is required</string>
    <string name="tuiroom_toast_mute_all_audio">Mute All</string>
    <string name="tuiroom_toast_not_mute_all_audio">Unmute All</string>
    <string name="tuiroom_toast_mute_all_video">Stop Videos</string>
    <string name="tuiroom_toast_not_mute_all_video">Start Videos</string>
    <string name="tuiroom_dialog_ok">OK</string>
    <string name="tuiroom_dialog_cancel">Cancel</string>
    <string name="tuiroom_item_video_conferencing">Video Conferencing</string>
    <string name="tuiroom_tv_room_number">Conference ID</string>
    <string name="tuiroom_tv_please_input_room_number">Enter a conference ID</string>
    <string name="tuiroom_tv_user_name">Username</string>
    <string name="tuiroom_tv_hint_user_name">Enter a username</string>
    <string name="tuiroom_tv_screen_capture">You are sharing your screen</string>
    <string name="tuiroom_tv_stop_screen_capture">Stop</string>
    <string name="tuiroom_tv_tools_user_name">WDC</string>
    <string name="tuiroom_tv_settings">Settings</string>
    <string name="tuiroom_tv_screen_recording">Screen Recording</string>
    <string name="tuiroom_tv_enable_audio">Enable Audio</string>
    <string name="tuiroom_tv_send">Send</string>
    <string name="tuiroom_tv_enable">Enable</string>
    <string name="tuiroom_tv_exit_room">Leave</string>
    <string name="tuiroom_tv_member_list">Members</string>
    <string name="tuiroom_create">Create Room</string>
    <string name="tuiroom_join">Join Room</string>
    <string name="tuiroom_room_id">Room ID</string>
    <string name="tuiroom_username">Username</string>
    <string name="tuiroom_copy_room_id_success">Room ID copied successfully.</string>
    <string name="tuiroom_enter_room_success">Join room successfully</string>
    <string name="tuiroom_mute_audio_by_master">You were muted by the room owner.</string>
    <string name="tuiroom_un_mute_audio_by_master">You were unmuted by the room owner.</string>
    <string name="tuiroom_mute_video_by_master">The room owner disabled your video.</string>
    <string name="tuiroom_un_mute_video_by_master">The room owner enabled your video.</string>
    <string name="tuiroom_un_mute_audio_success">Unmuted successfully</string>
    <string name="tuiroom_un_mute_video_success">Enabled video successfully</string>
    <string name="tuiroom_kick_user_confirm">Are you sure you want to remove \"%s\"?</string>
    <string name="tuiroom_confirm">Confirm</string>
    <string name="tuiroom_kicked_by_master">You were removed by the room owner.</string>
    <string name="tuiroom_btn_return">Back</string>
    <string name="tuiroom_room_room_destroyed">The room was closed.</string>
    <string name="tuiroom_tips_start_camera">Please turn on the camera permission first</string>
    <string name="tuiroom_tips_start_audio">Please turn on the microphone permission first</string>
    <string name="tuiroom_permission_mic_reason_title">%s applies for access to the microphone</string>
    <string name="tuiroom_permission_mic_reason">Needs access to your microphone, and it can be used for functions such as Interactive Video Streaming, Show Live, Video Call, Group Video Call, Multi-person audio and video room, etc.</string>
    <string name="tuiroom_permission_camera_reason_title">%s applies for camera permission</string>
    <string name="tuiroom_permission_camera_reason">Needs access to your camera, and it can be used for functions such as Interactive Video Streaming, Show Live, Video Call, Group Video Call, Multi-person audio and video room, etc. For beauty filters to work, we will collect the facial information captured by your camera in real time to detect your facial features.</string>
    <string name="tuiroom_create_room_limit">The cloud communication account you are currently using has not activated the audio and video chat room function, and the number of chat rooms created exceeds the limit, please go to the Tencent Cloud official website to open [IM audio and video chat rooms]：https://cloud.tencent.com/document/product/269/11673</string>
    <string name="tuiroom_create_or_join_group_limit">The number of groups that a single user can create and join exceeds the limit, please purchase relevant packages, more details:https://cloud.tencent.com/document/product/269/11673</string>
    <string name="tuiroom_group_member_limit">The number of group members exceeds the limit, please refer to it, please purchase the relevant packages, more details:https://cloud.tencent.com/document/product/269/11673</string>
    <string name="tuiroom_first_enter_room_tips">In accordance with relevant regulations, the app forbids pornographic, abusive, violent, terrorist, and politically sensitive content. All audio/video calls and live streams are recorded and archived.</string>
    <string name="tuiroom_show_float_window">Are you sure you want to create a floating window?</string>
    <string name="tuiroom_already_in_room">You are already in the room</string>
</resources>
