<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tuiroom_color_white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_marginTop="28dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/tuiroom_ic_back">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:text="@string/tuiroom_join"
            android:textColor="@color/tuiroom_color_black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_tuiroom_link"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right|center_vertical"
            android:background="@color/tuiroom_transparent"
            android:padding="10dp"
            android:src="@drawable/tuiroom_ic_question_link" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@color/tuiroom_bg_main"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_setting_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/tuiroom_color_white"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="12dp"
            android:background="@color/tuiroom_color_white"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                android:id="@+id/user_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/tuiroom_username"
                android:textColor="@color/tuiroom_color_main_text"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:textColor="@color/tuiroom_color_main_text"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/tuiroom_color_bg_main" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/tuiroom_color_white"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                android:id="@+id/room_id_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/tuiroom_room_id"
                android:textColor="@color/tuiroom_color_main_text"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_room_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="21dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/tuiroom_tv_please_input_room_number"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxEms="10"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/tuiroom_color_main_text"
                android:textColorHint="@color/tuiroom_text_color_hint"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_enter"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:background="@drawable/tuiroom_btn_join"
        android:enabled="true"
        android:gravity="center"
        android:text="@string/tuiroom_enter_tag_normal"
        android:textColor="@color/tuiroom_color_white"
        android:textSize="14sp" />

</RelativeLayout>

